# bkgn

./: Cargo.toml
src/: main.rs  position.rs
src/filter/: abberate.rs  barrel.rs  blur.rs  crop.rs  dither.rs  march.rs  mod.rs  noise.rs  scan.rs  vignette.rs
src/generator/: bars.rs  file.rs  maze.rs  mod.rs  noise.rs  random.rs  stripe.rs
