[package]
name = "bkgn"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"
imageproc = "0.21.0"
noise = "0.7.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_distr = "0.3.0"
